# src/main/java/com/mosify/infrastructure/in/controller/UserController.java
@@ -3,6 +3,7 @@ package com.mosify.infrastructure.in.controller;
 import com.mosify.api.model.WebUserRequest;
 import com.mosify.api.model.WebUserResponse;
 import com.mosify.application.port.in.user.UserCreatePort;
+import com.mosify.application.port.in.user.UserDeletePort;
 import com.mosify.application.port.in.user.UserGetAllPort;
 import com.mosify.application.port.in.user.UserGetByIdPort;
 import com.mosify.domain.model.User;
@@ -20,15 +21,18 @@ public class UserController {
     private final UserCreatePort userCreatePort;
     private final UserGetByIdPort userGetByIdPort;
     private final UserGetAllPort userGetAllPort;
+    private final UserDeletePort userDeletePort;
     private final UserWebConverter webConverter;
 
     public UserController(UserCreatePort userCreatePort,
                           UserGetByIdPort userGetByIdPort,
                           UserGetAllPort userGetAllPort,
+                          UserDeletePort userDeletePort,
                           UserWebConverter webConverter) {
         this.userCreatePort = userCreatePort;
         this.userGetByIdPort = userGetByIdPort;
         this.userGetAllPort = userGetAllPort;
+        this.userDeletePort = userDeletePort;
         this.webConverter = webConverter;
     }
 
@@ -51,5 +55,11 @@ public class UserController {
                 .map(webConverter::toWebResponse)
                 .toList();
         return ResponseEntity.ok(responses);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteUser(@PathVariable UUID id) {
+        userDeletePort.deleteUser(id);
+        return ResponseEntity.noContent().build();
     }
 }
